View Issue Details

IDProjectCategoryView StatusLast Update
0024235Open CASCADEOCCT:Modeling Algorithmspublic2013-12-19 13:58
Reporterkgv Assigned Tobugmaster  
PrioritylowSeverityminor 
Status closedResolutionfixed 
PlatformAOSL 
Product Version6.6.0 
Target Version6.7.0Fixed in Version6.7.0 
Summary0024235: BRepBuilderAPI_Sewing - add protection against too small tolerance
DescriptionInitialization of BRepBuilderAPI_Sewing with 0.0 tolerance leads to division by zero errors. It make sense to protect algorithm at initialization stage rather than fall though invalid parameter to the internal algorithms.
TagsNo tags attached.
Test case numberNot needed

Activities

kgv

2013-10-07 15:54

developer   ~0025940

Patch, as suggested by abv, has been pushed into CR24235 branch. Please review.

ifv

2013-10-07 16:01

developer   ~0025942

Ok

mkv

2013-10-09 06:50

tester   ~0025978

Dear BugMaster,

Branch CR24235 (and products from GIT master) was compiled on Linux and Windows platforms and tested.
SHA-1: 967f5e78bf5735409faf1b04d4305c07a839733b

Number of compiler warnings:

occt component :
Linux: 423 (424 on master)
Windows: 9 (9 on master)

products component :
Linux: 190 (189 on master)
Windows: 287 (287 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 367410892 / 367286876
Total CPU difference: 38935.65000000024 / 44591.450000001256

Testing on Windows:
Total MEMORY difference: 432031136 / 433555680
Total CPU difference: 45939.359375 / 41902.546875

There are not differences in images found by testdiff.

Related Changesets

occt: master eb7c351a

2013-10-07 11:53:19

kgv


Committer: bugmaster Details Diff
0024235: BRepBuilderAPI_Sewing - add protection against too small tolerance Affected Issues
0024235
mod - src/BRepBuilderAPI/BRepBuilderAPI_Sewing.cxx Diff File

Issue History

Date Modified Username Field Change
2013-10-07 15:50 kgv New Issue
2013-10-07 15:50 kgv Assigned To => ifv
2013-10-07 15:54 kgv Note Added: 0025940
2013-10-07 15:54 kgv Status new => resolved
2013-10-07 16:01 ifv Note Added: 0025942
2013-10-07 16:01 ifv Status resolved => reviewed
2013-10-08 12:07 mkv Assigned To ifv => mkv
2013-10-09 06:50 mkv Note Added: 0025978
2013-10-09 06:50 mkv Test case number => Not needed
2013-10-09 06:50 mkv Assigned To mkv => bugmaster
2013-10-09 06:50 mkv Status reviewed => tested
2013-10-11 13:35 bugmaster Changeset attached => occt master eb7c351a
2013-10-11 13:35 bugmaster Status tested => verified
2013-10-11 13:35 bugmaster Resolution open => fixed
2013-12-19 13:51 bugmaster Status verified => closed
2013-12-19 13:58 bugmaster Fixed in Version => 6.7.0