0024235: BRepBuilderAPI_Sewing - add protection against too small tolerance